syntax = "proto3";
package maingockien01.consumer.interoracle;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "interoracle/params.proto";
import "interoracle/oracle_info.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/maingockien01/consumer/x/interoracle/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/maingockien01/consumer/interoracle/params";
  }
  // Queries a OracleInfo by index.
	rpc OracleInfo(QueryGetOracleInfoRequest) returns (QueryGetOracleInfoResponse) {
		option (google.api.http).get = "/maingockien01/consumer/interoracle/oracle_info";
	}
// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetOracleInfoRequest {}

message QueryGetOracleInfoResponse {
	OracleInfo OracleInfo = 1 [(gogoproto.nullable) = false];
}
// this line is used by starport scaffolding # 3
